# bellfood_start_2024

./: Makefile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: test-deploy.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/llm/: llm_setup.py
backend/src/: .env  .env.example  app.py  settings.py
backend/src/database/: database.py  models.py  schemas.py
backend/src/routers/: chat.py  interest.py  llm.py  matchmaking.py
backend/src/utils/: insert_mock_data.py  llm_setup.py  matching_algo.py  test_matching.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/app/: _layout.tsx  modal.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  three.tsx  two.tsx
frontend/assets/static/: translations.json
frontend/components/: EmailInput.tsx  FadeEffect.tsx  InterestsSelect.tsx  LanguageSelect.tsx  Notification.tsx  TextInput.tsx
github-deployment/: ansible.cfg  inventory.yml  playbook.yml
github-deployment/host_vars/: vault.yml
