[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hannes221 <hannespfau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
ansible = "^9.3.0"
uvicorn = "^0.29.0"
predictionguard = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
